--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.squareup.okhttp3:okhttp:3.8.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'org.parceler:parceler-api:1.1.7'
+    annotationProcessor 'org.parceler:parceler:1.1.7'
     testCompile 'junit:junit:4.12'
 }
