--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,7 @@ dependencies {
     compile 'org.parceler:parceler-api:1.1.7'
     annotationProcessor 'org.parceler:parceler:1.1.7'
     testCompile 'junit:junit:4.12'
+    //expandable textView for reviews
+    compile 'com.ms-square:expandableTextView:0.1.4'
+    compile 'com.android.support:cardview-v7:25.3.1'
 }
