--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,3 +53,4 @@ dependencies {
     annotationProcessor 'org.parceler:parceler:1.1.7'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
+apply plugin: 'com.google.gms.google-services'
